@startuml
skinparam linetype ortho

hide circle
hide empty members

skinparam class {
    BackgroundColor White
    BorderColor Black
    ArrowColor Black
}

'==============================
' Lookup Tables
'==============================
class College_Units {
    +code : varchar <<PK>>
    +full_name : text
}

class IPR_Status_Types {
    +id : serial <<PK>>
    +code : varchar
    +label : varchar
}

'==============================
' Main Tables
'==============================
class Users {
    +id : uuid <<PK>>
    +full_name : text
    +college : varchar <<FK.College_Units.code>>
    +email : text
    +role : text
    +is_active : boolean
    +created_at : timestamptz
}

class IPR_Applications {
    +id : uuid <<PK>>
    +ip_title : text
    +project_title : text
    +ip_type : iprType
    +funding_source : text
    +filing_date : date (nullable)
    +registration_date : date (nullable)
    +created_at : timestamptz
    +updated_at : timestamptz
}

class Inventors {
    +id : uuid <<PK>>
    +application_id : uuid <<FK.IPR_Applications.id>>
    +techgen_id : uuid <<FK.Users.id>> (nullable)
    +full_name : text
    +email : text
    +college : varchar <<FK.College_Units.code>>
    +comments : text (nullable)
}

class IPR_Statuses {
    +id : uuid <<PK>>
    +application_id : uuid <<FK.IPR_Applications.id>>
    +status_type : varchar <<FK.IPR_Status_Types.code>>
    +deadline : date (nullable)
    +note : text (nullable)
    +created_at : timestamptz
}

class IPR_Files {
    +id : uuid <<PK>>
    +application_id : uuid <<FK.IPR_Applications.id>>
    +owner_id : uuid <<FK.Users.id>>
    +storage_path : text
    +file_name : text
    +file_description : text (nullable)
    +file_type : text
    +comments : text (nullable)
    +uploaded_at : timestamptz
}

class Notifications {
    +id : uuid <<PK>>
    +user_id : uuid <<FK.Users.id>>
    +application_id : uuid <<FK.IPR_Applications.id>> (nullable)
    +title : text
    +content : text
    +read_at : timestamptz (nullable)
    +created_at : timestamptz
}

class Audit_Trail {
    +id : uuid <<PK>>
    +event_at : timestamptz
    +snapshot_user_name : text
    +snapshot_user_role : text
    +action_type : actionType
    +action_taken : text
    +action_result : actionResult
    +record_type : recordType
    +snapshot_record_reference : text
    +changed_fields : JSONB (nullable)
}

'==============================
' Relationships
'==============================
College_Units "1" -- "1..*" Users
College_Units "1" -- "0..*" Inventors

IPR_Status_Types "1" -- "0..*" IPR_Statuses

Users "0..1" -- "0..*" Inventors
Users "1" -- "0..*" IPR_Files
Users "1" -- "0..*" Notifications

IPR_Applications "1" -- "1..*" Inventors
IPR_Applications "1" -- "1..*" IPR_Statuses
IPR_Applications "1" -- "0..*" IPR_Files
IPR_Applications "1" -- "0..*" Notifications

'==============================
' Layout hints
'==============================
College_Units -[hidden]- IPR_Status_Types
Users -[hidden]- IPR_Applications
Inventors -[hidden]- IPR_Statuses
IPR_Files -[hidden]- Notifications
@enduml